# InceptionTime

./: README.md  setup.cfg
classifiers/: inception.py
src/: main.py  receptive.py
src/inception_time/classifiers/: __init__.py  inception.py  nne.py
src/inception_time/utils/: __init__.py  utils.py
