[metadata]
name = InceptionTime
version = 0.0.1
author = Felix Maninger
description = A Package for InceptionTime
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/felix-mnngr/InceptionTime
project_urls =
    Bug Tracker = https://github.com/felix-mnngr/InceptionTime/issues
    Origin = https://github.com/hfawaz/InceptionTime
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
